# rhymalize

./: .gitignore  Cargo.toml  google-10000-english.txt  text.txt
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/ipa_utils/: fetching.rs  find_rhyme.rs  ipa.rs  mod.rs
src/ipa_utils/fetching/: genius.rs  json.rs  mod.rs  wiktionary.rs
src/ipa_utils/ipa/: english.rs  mod.rs
src/lib/: ipa.rs  lib.rs
tests/: ipa_conversion.rs
