[package]
name = "rhymalize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rhymalize"
version = "0.1.0"
path = "src/lib.rs"

[[bin]]
name = "rhymalize-example"
version = "0.1.0"
path = "src/main.rs"

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
regex = "1.5"
serde_json = "1.0"
anyhow = "1.0.71"
