[package]
name = "rhymalize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rhymalize"
version = "0.1.0"
path = "src/lib.rs"



[[bin]]
name = "rhymalize-example"
path = "src/bin/rhymalize-test.rs"

[[bin]]
name = "ipa-example"
path = "src/bin/ipa-test.rs"

[[bin]]
name = "ipa-cli"
path = "src/bin/ipa-cli.rs"

[[bin]]
name = "rhymalize-gui"
path = "src/bin/rhymalize-gui.rs"


[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
regex = "1.5"
serde_json = "1.0"
anyhow = "1.0.71"
phf = { version = "0.11.2", features = ["macros"] }
unicode-segmentation = "1.11.0"
iced = {version="0.12.0",features = ["advanced","debug"]}
futures = "0.3.30"
async-std = { version = "1.12.0", features = ["tokio1"] }